Fix SVG overlapping TOC when zoomed in

--- a/@theme/styles.css
+++ b/@theme/styles.css
@@ -108,6 +108,11 @@ html.light .not_enabled::after {
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
+/* Limit inlined SVG so it doesn't overflow the main column */
+[data-component-name="Markdoc/InlineSvg/InlineSvg"] svg {
+  max-width: 100%;
+}
+
 /* Theme-aware diagrams. Exported from xrpl-dev-portal repo's SCSS. */
 html:not(.light) article svg[fill=black] {
   fill: #FFFFFF;
